tests/sql_correctness/snapshots/query_set_operations__1.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT bid FROM pgbench_accounts UNION SELECT bid FROM pgbench_tellers ORDER BY bid

+-----+
| bid |
+-----+
| 1   |
+-----+
