tests/sql_correctness/snapshots/query_set_operations__2.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT bid FROM pgbench_accounts INTERSECT SELECT bid FROM pgbench_tellers

+-----+
| bid |
+-----+
| 1   |
+-----+
