tests/sql_correctness/snapshots/query_set_operations__3.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT bid FROM pgbench_branches EXCEPT SELECT DISTINCT bid FROM pgbench_history

+-----+
| bid |
+-----+
| 1   |
+-----+
