tests/sql_correctness/snapshots/query_set_operations__4.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT DISTINCT bid, abalance FROM pgbench_accounts WHERE abalance != 0 ORDER BY bid, abalance LIMIT 50

++
++
